@@ -34,7 +34,6 @@
 	position: absolute;
 	top: -6px;
 	left: 0;
-	right: 260px;
 	height: 40px;
 	white-space: nowrap;
 	z-index: 10;
