@@ -341,7 +341,6 @@ a.iconbutton.threadmode.selected {
 #messagetoolbar {
 	position: absolute;
 	top: -6px;
-	right: 390px;
 	left: 0;
 	height: 40px;
 	white-space: nowrap;
@@ -362,7 +361,7 @@ a.iconbutton.threadmode.selected {
 	position: absolute;
 	right: 0;
 	top: 0;
-	width: 240px;
+	width: 400px;
 }
 
 #mailpreviewtoggle {
