@@ -660,7 +660,7 @@ a.iconlink.upload {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	min-width: 1150px;
+	min-width: 1024px;
 }
 
 .scroller {
