@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Remove (too big) min-width on mail screen
 - Add full headers view in message preview window (#1488538)
 - Fix message display page issues - unified with message preview (#1488590, #1488642)
 - Fix identity selection on reply (#1488101)
